k8s/ingress.tmpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endo-api
  namespace: endo-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - ${HOST}
      secretName: endo-api-tls
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: endo-api
                port:
                  number: 80
